# GDI-Launcher

./: .gitignore  CONTRIBUTING.md  LICENSE  README.md  build.py  main.py  pyproject.toml  requirements.txt  setup.py  versions.json
gdi_launcher/: config.py  core.py  dialogs.py  widgets.py  workers.py
scripts/: build.py  build_installer.py
src/: __main__.py  app.py  config.py  core.py  main.py  workers.py
src/gdi_launcher/: app.py
src/gdi_launcher/config/: __init__.py  constants.py  manifest.py  paths.py
src/gdi_launcher/domain/: __init__.py  instance.py  version.py
src/gdi_launcher/i18n/: translations.json
src/gdi_launcher/services/: __init__.py  file_service.py  install_service.py  instance_service.py  launch_service.py  manifest_service.py  process_priority_service.py  save_service.py  settings_service.py  translation_service.py
src/gdi_launcher/ui/: __init__.py  main_window.py
src/gdi_launcher/ui/dialogs/: __init__.py  add_instance_dialog.py  delete_progress_dialog.py  install_progress_dialog.py  language_selection_dialog.py  message_box.py  settings_dialog.py
src/gdi_launcher/ui/styles/: dark.qss
src/gdi_launcher/ui/widgets/: __init__.py  action_row_button.py  instance_card.py
src/gdi_launcher/workers/: __init__.py  delete_worker.py  install_worker.py  launch_worker.py
src/ui/: dialogs.py  main_window.py  widgets.py
tests/: test_installer_icon.py  test_installer_language_handoff.py  test_instance_names.py  test_manifest.py  test_paths.py  test_translations.py
