[build-system]
requires = ["setuptools>=69", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "gdi-launcher"
version = "1.0.0"
description = "Geometry Dash instance launcher"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "PySide6>=6.6",
]

[project.scripts]
gdi-launcher = "gdi_launcher.app:main"

[project.optional-dependencies]
build = [
    "PyInstaller>=6.0",
]
test = [
    "pytest>=8.0",
]

[tool.setuptools.packages.find]
where = ["src"]

[tool.setuptools.package-data]
gdi_launcher = ["ui/styles/*.qss", "i18n/*.json"]

[tool.pytest.ini_options]
pythonpath = ["src"]
